[tool.poetry]
name = "lg-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
google-genai = ">=1.3.0,<2.0.0"
langgraph = "^0.3.2"
langchain-google-genai = "^2.0.11"
langchain-google-vertexai = "^2.0.14"
google-cloud-aiplatform = "^1.82.0"
mypy-protobuf = "^3.6.0"
langgraph-cli = "^0.1.75"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
